--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 # Add regular dependencies here.
 dependencies:
   collection: ^1.18.0
+  args: ^2.5.0
 
 dev_dependencies:
   lints: ^6.0.0
