--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   opentelemetry: ^0.18.10
   redis: ^4.0.0
   contextual: ^2.0.0
+  yaml: ^3.1.2
 
 dev_dependencies:
   lints: ^6.0.0
