--- a/examples/otel_metrics/collector-config.yaml
+++ b/examples/otel_metrics/collector-config.yaml
@@ -3,21 +3,34 @@ receivers:
     protocols:
       http:
         endpoint: 0.0.0.0:4318
+      grpc:
+        endpoint: 0.0.0.0:4317
 
 processors:
   batch: {}
 
 exporters:
   logging:
-    loglevel: debug
+    verbosity: detailed
   otlp/jaeger:
     endpoint: jaeger:4317
     tls:
       insecure: true
+  prometheus:
+    endpoint: "0.0.0.0:8888"
+    namespace: stem
 
 service:
+  telemetry:
+    metrics:
+      address: 0.0.0.0:8889
+      level: detailed
   pipelines:
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, otlp/jaeger]
+      exporters: [logging, prometheus]
+    traces:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [otlp/jaeger]
