--- a/examples/microservice/docker-compose.yml
+++ b/examples/microservice/docker-compose.yml
@@ -4,11 +4,15 @@ services:
     ports:
       - "6379:6379"
     command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - redis-data:/data
+    restart: unless-stopped
 
   enqueuer:
     build:
       context: ../..
       dockerfile: examples/microservice/enqueuer/Dockerfile
+      target: dev
     env_file:
       - .env.example
     environment:
@@ -17,12 +21,40 @@ services:
       - "${PORT:-8081}:8081"
     depends_on:
       - redis
+    restart: unless-stopped
 
   worker:
     build:
       context: ../..
       dockerfile: examples/microservice/worker/Dockerfile
+      target: dev
     env_file:
       - .env.example
     depends_on:
       - redis
+    restart: unless-stopped
+
+  # worker2:
+  #   build:
+  #     context: ../..
+  #     dockerfile: examples/microservice/worker/Dockerfile
+  #     target: dev
+  #   env_file:
+  #     - .env.example
+  #   depends_on:
+  #     - redis
+  #   restart: unless-stopped
+
+  # worker3:
+  #   build:
+  #     context: ../..
+  #     dockerfile: examples/microservice/worker/Dockerfile
+  #     target: dev
+  #   env_file:
+  #     - .env.example
+  #   depends_on:
+  #     - redis
+  #   restart: unless-stopped
+
+volumes:
+  redis-data:
