--- a/examples/monolith_service/Dockerfile
+++ b/examples/monolith_service/Dockerfile
@@ -1,5 +1,12 @@
 # syntax=docker/dockerfile:1
 
+FROM dart:stable AS dev
+WORKDIR /app
+COPY . .
+WORKDIR /app/examples/monolith_service
+RUN dart pub get
+CMD ["dart", "run", "bin/service.dart"]
+
 FROM dart:stable AS build
 WORKDIR /app
 COPY . .
