--- a/examples/microservice/.env.example
+++ b/examples/microservice/.env.example
@@ -2,3 +2,8 @@ STEM_BROKER_URL=redis://redis:6379/0
 STEM_RESULT_BACKEND_URL=redis://redis:6379/1
 # Optional override for the HTTP port exposed by the enqueuer service
 PORT=8081
+
+# Payload signing (comma-separated keyId:base64Secret pairs). Replace the sample secret.
+STEM_SIGNING_KEYS=primary:aGVsbG8tc3RlbS1zaWduaW5nLXNlY3JldA==
+# Active signing key used by producers
+STEM_SIGNING_ACTIVE_KEY=primary
