--- a/examples/microservice/.env.example
+++ b/examples/microservice/.env.example
@@ -1,5 +1,5 @@
-STEM_BROKER_URL=redis://redis:6379/0
-STEM_RESULT_BACKEND_URL=redis://redis:6379/1
+STEM_BROKER_URL=rediss://redis:6379/0
+STEM_RESULT_BACKEND_URL=rediss://redis:6379/1
 # Optional override for the HTTP port exposed by the enqueuer service
 PORT=8081
 
@@ -7,3 +7,7 @@ PORT=8081
 STEM_SIGNING_KEYS=primary:aGVsbG8tc3RlbS1zaWduaW5nLXNlY3JldA==
 # Active signing key used by producers
 STEM_SIGNING_ACTIVE_KEY=primary
+
+# TLS configuration (paths inside the container after mounting certs)
+STEM_TLS_CA_CERT=/certs/server.crt
+STEM_TLS_ALLOW_INSECURE=true
