--- a/examples/microservice/docker-compose.yml
+++ b/examples/microservice/docker-compose.yml
@@ -3,9 +3,25 @@ services:
     image: quay.io/opstree/redis:latest
     ports:
       - "6379:6379"
-    command: ["redis-server", "--appendonly", "yes"]
+    command:
+      [
+        "redis-server",
+        "--appendonly",
+        "yes",
+        "--tls-port",
+        "6379",
+        "--port",
+        "0",
+        "--tls-cert-file",
+        "/certs/server.crt",
+        "--tls-key-file",
+        "/certs/server.key",
+        "--tls-ca-cert-file",
+        "/certs/server.crt"
+      ]
     volumes:
       - redis-data:/data
+      - ./certs:/certs:ro
     restart: unless-stopped
 
   enqueuer:
@@ -17,6 +33,8 @@ services:
       - .env.example
     environment:
       PORT: ${PORT:-8081}
+    volumes:
+      - ./certs:/certs:ro
     ports:
       - "${PORT:-8081}:8081"
     depends_on:
@@ -32,6 +50,8 @@ services:
       - .env.example
     depends_on:
       - redis
+    volumes:
+      - ./certs:/certs:ro
     restart: unless-stopped
 
   worker2:
@@ -43,6 +63,8 @@ services:
       - .env.example
     depends_on:
       - redis
+    volumes:
+      - ./certs:/certs:ro
     restart: unless-stopped
 
   worker3:
@@ -54,6 +76,8 @@ services:
       - .env.example
     depends_on:
       - redis
+    volumes:
+      - ./certs:/certs:ro
     restart: unless-stopped
 
 volumes:
