Support Ed25519 message signing and TLS-ready microservice

--- a/examples/microservice/.env.example
+++ b/examples/microservice/.env.example
@@ -7,6 +7,8 @@ PORT=8081
 STEM_SIGNING_KEYS=primary:aGVsbG8tc3RlbS1zaWduaW5nLXNlY3JldA==
 # Active signing key used by producers
 STEM_SIGNING_ACTIVE_KEY=primary
+# To use Ed25519 signing instead, set STEM_SIGNING_ALGORITHM=ed25519 and provide
+# STEM_SIGNING_PUBLIC_KEYS / STEM_SIGNING_PRIVATE_KEYS values.
 
 # TLS configuration (paths inside the container after mounting certs)
 STEM_TLS_CA_CERT=/certs/server.crt
