--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   contextual: ^2.0.0
   yaml: ^3.1.2
   crypto: ^3.0.3
+  cryptography: ^2.6.0
 
 dev_dependencies:
   lints: ^6.0.0
