Add security configuration profiles and documentation

--- a/examples/microservice/.env.example
+++ b/examples/microservice/.env.example
@@ -13,3 +13,7 @@ STEM_SIGNING_ACTIVE_KEY=primary
 # TLS configuration (paths inside the container after mounting certs)
 STEM_TLS_CA_CERT=/certs/server.crt
 STEM_TLS_ALLOW_INSECURE=true
+STEM_SIGNING_ALGORITHM=ed25519
+STEM_SIGNING_PUBLIC_KEYS=primary:MQKrHe7hFRCoOi1DGdEdQOcfQGqEcTQGt79szn6gTJ0=
+STEM_SIGNING_PRIVATE_KEYS=primary:v/eFuFJGEl0ieIlYionIcFjYKmKK/lMrfi+pGcLsKew=
+STEM_SIGNING_ACTIVE_KEY=primary
