--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,11 @@ dependencies:
   yaml: ^3.1.2
   crypto: ^3.0.3
   cryptography: ^2.6.0
+  postgres: ^2.6.2
 
 dev_dependencies:
   lints: ^6.0.0
   test: ^1.25.6
   coverage: ^1.7.2
+  gha: ^0.0.2
+  gha_cli: ^1.0.1
