--- a/.github/workflows/ci.generated.yaml
+++ b/.github/workflows/ci.generated.yaml
@@ -49,4 +49,4 @@ jobs:
         image: redis:7
         ports:
           - 6379:6379
-        options: --health-cmd \"redis-cli ping\" --health-interval 5s --health-timeout 5s --health-retries 20
+        options: --health-cmd=redis-cli\ ping --health-interval=5s --health-timeout=5s --health-retries=20
