--- a/.github/workflows/security-scan.generated.yaml
+++ b/.github/workflows/security-scan.generated.yaml
@@ -12,8 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: "actions/checkout@v4"
-      - name: Set up Dart
-        uses: "kingwill101/gha-dart@v2"
+      - uses: "dart-lang/setup-dart@v1"
         with:
           sdk: stable
       - name: Run vulnerability scan
