--- a/.github/workflows/ci.generated.yaml
+++ b/.github/workflows/ci.generated.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: "actions/checkout@v4"
       - uses: "dart-lang/setup-dart@v1"
         with:
-          sdk: 3.5.0
+          sdk: stable
       - name: Fetch dependencies
         run: dart pub get
       - name: Run quality checks
