--- a/examples/email_service/.env.example
+++ b/examples/email_service/.env.example
@@ -1,5 +1,6 @@
 STEM_BROKER_URL=redis://redis:6379/0
 STEM_RESULT_BACKEND_URL=redis://redis:6379/1
+STEM_DEFAULT_QUEUE=emails
 PORT=8082
 SMTP_HOST=mailhog
 SMTP_PORT=1025
