--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   postgres: ^3.5.8
   path: ^1.9.0
   glob: ^2.1.3
+  timezone: ^0.9.2
 
 dev_dependencies:
   lints: ^6.0.0
@@ -28,3 +29,4 @@ dev_dependencies:
   coverage: ^1.7.2
   gha: ^0.0.2
   gha_cli: ^1.0.1
+  async: ^2.13.0
