--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: stem
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
+version: 0.1.0-alpha
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ">=3.2.0 <4.0.0"
+  sdk: ">=3.9.0 <4.0.0"
 
 # Add regular dependencies here.
 dependencies:
