--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: stem
-description: A starting point for Dart libraries or applications.
+description: "Stem is a Dart-native background job platform with Redis Streams, retries, scheduling, observability, and security tooling."
 version: 0.1.0-alpha
 repository: https://github.com/kingwill101/stem
 
@@ -22,6 +22,20 @@ dependencies:
   path: ^1.9.0
   glob: ^2.1.3
   timezone: ^0.9.2
+
+keywords:
+  - background-jobs
+  - task-queue
+  - redis
+  - scheduler
+  - opentelemetry
+  - dart
+
+topics:
+  - background-processing
+  - message-queue
+  - redis
+  - observability
 
 dev_dependencies:
   lints: ^6.0.0
