--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem
 description: "Stem is a Dart-native background job platform with Redis Streams, retries, scheduling, observability, and security tooling."
-version: 0.1.0-alpha
+version: 0.1.0-alpha.2
 repository: https://github.com/kingwill101/stem
 
 environment:
@@ -10,25 +10,24 @@ environment:
 dependencies:
   collection: ^1.18.0
   args: ^2.5.0
-  opentelemetry: ^0.18.10
-  dartastic_opentelemetry: ^0.8.6
+  dartastic_opentelemetry: ^0.9.2
   dartastic_opentelemetry_api: ^0.8.8
   redis: ^4.0.0
   contextual: ^2.0.0
   yaml: ^3.1.2
   crypto: ^3.0.3
   cryptography: ^2.6.0
-  postgres: ^3.5.8
+  postgres: ^3.5.9
   path: ^1.9.0
   glob: ^2.1.3
-  timezone: ^0.9.2
+  timezone: ^0.10.1
 
 keywords:
   - background-jobs
   - task-queue
   - redis
   - scheduler
-  - opentelemetry
+  - dartastic-opentelemetry
   - dart
 
 topics:
@@ -47,3 +46,5 @@ dev_dependencies:
 
 false_secrets:
   - /example/microservice/certs/*
+  - /example/postgres_tls/certs/*
+  - /docker/testing/postgres/certs/*
