--- a/packages/stem_postgres/pubspec.yaml
+++ b/packages/stem_postgres/pubspec.yaml
@@ -1,15 +1,14 @@
 name: stem_postgres
 description: Postgres broker, result backend, and scheduler utilities for Stem.
 version: 0.1.0-alpha.3
-publish_to: "none"
+repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
   sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
   postgres: ^3.5.9
-  stem:
-    path: ../stem
+  stem: ^0.1.0-alpha.3
   collection: ^1.18.0
   path: ^1.9.1
 
@@ -17,5 +16,4 @@ dependencies:
 dev_dependencies:
   lints: ^6.0.0
   test: ^1.26.3
-  stem_adapter_tests:
-    path: ../stem_adapter_tests
+  stem_adapter_tests: ^0.1.0-alpha.3
