feat: Add Redis and SQLite workflow support
- Implement Redis workflow store and factories in stem_redis package.
- Add SQLite workflow store and factories in stem_sqlite package.
- Update stem_postgres and stem_redis exports to include new workflow factories.
- Modify pubspec.yaml to ensure proper workspace structure.

--- a/packages/stem/pubspec.yaml
+++ b/packages/stem/pubspec.yaml
@@ -42,6 +42,8 @@ dev_dependencies:
   stem_cli: ^0.1.0-alpha.3
   stem_redis: ^0.1.0-alpha.3
   stem_postgres: ^0.1.0-alpha.3
+  stem_sqlite: ^0.1.0-alpha.3
+  path: ^1.9.1
 
 false_secrets:
   - /example/microservice/certs/*
