--- a/.github/workflows/ci.generated.yaml
+++ b/.github/workflows/ci.generated.yaml
@@ -11,6 +11,12 @@ jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
+    env:
+      STEM_TEST_REDIS_URL: redis://127.0.0.1:56379
+      STEM_TEST_POSTGRES_URL: "postgresql://postgres:postgres@127.0.0.1:65432/stem_test"
+      STEM_TEST_POSTGRES_TLS_URL: "postgresql://postgres:postgres@127.0.0.1:65432/stem_test"
+      STEM_TEST_POSTGRES_TLS_CA_CERT: packages/stem_cli/docker/testing/certs/postgres-root.crt
+      STEM_CHAOS_REDIS_URL: redis://127.0.0.1:56379/15
     steps:
       - uses: "actions/checkout@v4"
       - uses: "dart-lang/setup-dart@v1"
@@ -21,7 +27,6 @@ jobs:
       - name: Run quality checks
         run: tool/quality/run_quality_checks.sh
         env:
-          STEM_CHAOS_REDIS_URL: redis://127.0.0.1:6379/15
           COVERAGE_THRESHOLD: "60"
       - name: Validate OpenSpec changes
         run: |-
@@ -48,4 +53,14 @@ jobs:
       redis:
         image: redis:7
         ports:
-          - 6379:6379
+          - 56379:6379
+        options: --health-cmd \"redis-cli ping\" --health-interval 5s --health-timeout 3s --health-retries 5
+      postgres:
+        image: postgres:15-alpine
+        ports:
+          - 65432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: stem_test
+        options: --health-cmd \"pg_isready -U postgres\" --health-interval 10s --health-timeout 5s --health-retries 5
