--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -7,16 +7,17 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
-  drift: ^2.15.0
-  sqlite3: ^2.9.3
+  ormed: ^0.1.0-dev+5
+  ormed_cli: ^0.1.0-dev+5
+  ormed_sqlite: ^0.1.0-dev+5
   path: ^1.9.1
   collection: ^1.18.0
   meta: ^1.17.0
+  sqlite3: ^3.1.1
   stem: ^0.1.0-alpha.4
 
 dev_dependencies:
-  build_runner: ^2.4.8
-  drift_dev: ^2.15.0
+  build_runner: ^2.10.4
   lints: ^6.0.0
   test: ^1.26.3
   stem_adapter_tests: ^0.1.0-alpha.4
