--- a/packages/stem/example/postgres_tls/justfile
+++ b/packages/stem/example/postgres_tls/justfile
@@ -16,10 +16,10 @@ build:
     @true
 
 run-worker:
-    {{ENV_LOAD}} cd "{{STEM_ROOT}}" && dart run example/postgres_tls/bin/worker.dart
+    if [ -f "{{ENV_FILE}}" ]; then set -a; . "{{ENV_FILE}}"; set +a; elif [ -f "{{ROOT}}/{{ENV_FILE}}" ]; then set -a; . "{{ROOT}}/{{ENV_FILE}}"; set +a; fi cd "{{STEM_ROOT}}" && dart run example/postgres_tls/bin/worker.dart
 
 run-enqueue:
-    {{ENV_LOAD}} cd "{{STEM_ROOT}}" && dart run example/postgres_tls/bin/enqueue.dart
+    if [ -f "{{ENV_FILE}}" ]; then set -a; . "{{ENV_FILE}}"; set +a; elif [ -f "{{ROOT}}/{{ENV_FILE}}" ]; then set -a; . "{{ROOT}}/{{ENV_FILE}}"; set +a; fi cd "{{STEM_ROOT}}" && dart run example/postgres_tls/bin/enqueue.dart
 
 run: run-worker
 
