--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 
 dependencies:
   ormed: ^0.1.0-dev+5
-  ormed_cli: ^0.1.0-dev+5
   ormed_sqlite: ^0.1.0-dev+5
+  args: ^2.6.0
   path: ^1.9.1
   collection: ^1.18.0
   meta: ^1.17.0
