Prepare 0.1.0-dev release notes and publish automation

--- a/packages/dashboard/pubspec.yaml
+++ b/packages/dashboard/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
   ormed: ^0.1.0-dev+6
   routed: ^0.2.0
   routed_hotwire: ^0.1.0
-  stem: ^0.1.0-alpha.4
-  stem_cli: ^0.1.0-alpha.4
-  stem_redis: ^0.1.0-alpha.4
-  stem_postgres: ^0.1.0-alpha.4
-  stem_sqlite: ^0.1.0-alpha.4
+  stem: ^0.1.0-dev
+  stem_cli: ^0.1.0-dev
+  stem_redis: ^0.1.0-dev
+  stem_postgres: ^0.1.0-dev
+  stem_sqlite: ^0.1.0-dev
 
 dev_dependencies:
   lints: ^6.0.0
