--- a/packages/stem/pubspec.yaml
+++ b/packages/stem/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem
 description: "Stem is a Dart-native background job platform with Redis Streams, retries, scheduling, observability, and security tooling."
-version: 0.1.0-alpha.4
+version: 0.1.0-dev
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -38,11 +38,11 @@ dev_dependencies:
   gha: ^0.0.2
   gha_cli: ^1.0.1
   async: ^2.13.0
-  stem_adapter_tests: ^0.1.0-alpha.4
-  stem_cli: ^0.1.0-alpha.4
-  stem_redis: ^0.1.0-alpha.4
-  stem_postgres: ^0.1.0-alpha.4
-  stem_sqlite: ^0.1.0-alpha.4
+  stem_adapter_tests: ^0.1.0-dev
+  stem_cli: ^0.1.0-dev
+  stem_redis: ^0.1.0-dev
+  stem_postgres: ^0.1.0-dev
+  stem_sqlite: ^0.1.0-dev
   path: ^1.9.1
 
 false_secrets:
