--- a/packages/stem_redis/pubspec.yaml
+++ b/packages/stem_redis/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem_redis
 description: Redis broker, result backend, and scheduler utilities for Stem.
-version: 0.1.0-alpha.4
+version: 0.1.0-dev
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -8,11 +8,11 @@ environment:
 
 dependencies:
   redis: ^4.0.0
-  stem: ^0.1.0-alpha.4
+  stem: ^0.1.0-dev
   collection: ^1.18.0
   async: ^2.13.0
 
 dev_dependencies:
   lints: ^6.0.0
   test: ^1.26.3
-  stem_adapter_tests: ^0.1.0-alpha.4
+  stem_adapter_tests: ^0.1.0-dev
