--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem_sqlite
 description: SQLite broker and result backend for Stem.
-version: 0.1.0-alpha.4
+version: 0.1.0-dev
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -14,10 +14,10 @@ dependencies:
   collection: ^1.18.0
   meta: ^1.17.0
   sqlite3: ^3.1.1
-  stem: ^0.1.0-alpha.4
+  stem: ^0.1.0-dev
 
 dev_dependencies:
   build_runner: ^2.10.4
   lints: ^6.0.0
   test: ^1.26.3
-  stem_adapter_tests: ^0.1.0-alpha.4
+  stem_adapter_tests: ^0.1.0-dev
