--- a/packages/stem_postgres/pubspec.yaml
+++ b/packages/stem_postgres/pubspec.yaml
@@ -7,11 +7,12 @@ environment:
   sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
-  # postgres: ^3.5.9
+  postgres: ^3.5.9
   stem: ^0.1.0-dev
   collection: ^1.18.0
   path: ^1.9.1
   uuid: ^4.5.1
+  args: ^2.6.0
   ormed: ^0.1.0-dev+6
   ormed_postgres: ^0.1.0-dev+6
 
