Use artisanal args instead of args

--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -7,9 +7,9 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  artisanal: ^0.1.0-dev+4
   ormed: ^0.1.0-dev+6
   ormed_sqlite: ^0.1.0-dev+6
-  args: ^2.6.0
   path: ^1.9.1
   collection: ^1.18.0
   meta: ^1.17.0
