--- a/packages/stem_postgres/pubspec.yaml
+++ b/packages/stem_postgres/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
 
 dev_dependencies:
   lints: ^6.0.0
+  very_good_analysis: ^10.0.0
+
   test: ^1.26.3
   stem_adapter_tests: ^0.1.0-dev
   stem_cli: ^0.1.0-dev
