--- a/packages/dashboard/pubspec.yaml
+++ b/packages/dashboard/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
 dev_dependencies:
   lints: ^6.0.0
+  very_good_analysis: ^10.0.0
   test: ^1.26.3
   property_testing: ^0.2.1
   routed_testing: ^0.2.1+1
