--- a/packages/stem_sqlite/analysis_options.yaml
+++ b/packages/stem_sqlite/analysis_options.yaml
@@ -11,11 +11,8 @@
 # (the recommended set includes the core lints).
 # The core lints are also what is used by pub.dev for scoring packages.
 
-include: package:lints/recommended.yaml
-
-analyzer:
-  exclude:
-    - "**/*.orm.dart"
+# include: package:lints/recommended.yaml
+include: package:very_good_analysis/analysis_options.10.0.0.yaml
 # Uncomment the following section to specify additional rules.
 
 # linter:
