--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -19,5 +19,6 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.10.4
   lints: ^6.0.0
+  very_good_analysis: ^10.0.0
   test: ^1.26.3
   stem_adapter_tests: ^0.1.0-dev
