--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: stem_and_friends
 environment:
-  sdk: '>=3.9.2 <4.0.0'
+  sdk: ">=3.9.2 <4.0.0"
 workspace:
   - packages/stem
-  # - packages/dashboard
   - packages/stem_sqlite
   - packages/stem_adapter_tests
   - packages/stem_redis
@@ -11,3 +10,4 @@ workspace:
   - packages/stem_cli
 dev_dependencies:
   lints: ^6.0.0
+  very_good_analysis: ^10.0.0
